@@ -1,3 +1,7 @@
+2003-05-05  Eric B. Weddington  <eric@umginc.net>
+
+	* include/avr/io86r401.h: Update to match datasheet.
+
 2003-04-22  Theodore A. Roth  <troth@openavr.org>
 
 	* configure.in (AM_INIT_AUTOMAKE): Bump version.
